<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        tools:context="sg.edu.nus.iss.se.ft05.medipal.fragments.HelpFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="60dp"
            android:text="@string/faq"
            android:textSize="30dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5pt"
            android:background="@color/colorDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/question1"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/answer1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5pt"
            android:background="@color/colorDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/question2"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/answer2" />
    </LinearLayout>
</ScrollView>