<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        tools:context="com.vr.ashley.fragments.AboutFragment">


        <ImageView
            android:id="@+id/imageView_about"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="5.29"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/ic_icon_app_24dp" />

        <TextView
            android:id="@+id/textView_appName_about"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical|center_horizontal"
            android:includeFontPadding="false"
            android:paddingBottom="20dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="50dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_info_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4.49"
            android:gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:text="@string/about_info"
            android:textSize="20dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView_createdBy_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.32"
            android:gravity="center_horizontal"
            android:text="@string/about_createdBy"
            android:textSize="19dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView_ashish_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.32"
            android:gravity="center_horizontal"
            android:text="@string/about_ashish"
            android:textSize="15dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView_dhruv_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.32"
            android:gravity="center_horizontal"
            android:text="@string/about_dhruv"
            android:textSize="15dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView_swamini_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.32"
            android:gravity="center_horizontal"
            android:text="@string/about_swamini"
            android:textSize="15dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView_matthew_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.32"
            android:gravity="center_horizontal"
            android:text="@string/about_aakash"
            android:textSize="15dp"
            android:textStyle="italic" />

    </LinearLayout>
</ScrollView>