<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <ScrollView
        android:id="@+id/scrollView_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="bottom"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView_patientName_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:text="@string/intro_patientName"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_patientName_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="100" />

            <TextView
                android:id="@+id/textView_patientId_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:text="@string/intro_patientId"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_patientId_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:ems="10"
                android:inputType="number"
                android:maxLength="6" />

            <TextView
                android:id="@+id/textView_DoctorId_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:text="@string/intro_DoctorId"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_DoctorId_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:ems="10"
                android:inputType="number"
                android:maxLength="6" />

            <TextView
                android:id="@+id/textView_Phobia_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:text="@string/intro_Phobia"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_Phobia_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:ems="10"
                android:maxLength="24" />

            <Button
                android:id="@+id/saveIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/scrollView_intro"
                android:layout_gravity="bottom|center"
                android:background="@color/colorPrimary"
                android:text="@string/intro_button_start" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
